# molecular_surface_demo_tool

./: CMakeLists.txt  README.md
data/: 4_balls_2d.cin  4_balls_connected.cin  4_balls_disjoint.cin  4_balls_touching.cin  caffeine_2d.cin
src/: CMakeLists.txt  main.cpp
src/CGAL/: NGHK_Skin_surface_quadratic_surface_3.h
src/model/: cached_class.h  extract_balls_from_pdb.cpp  extract_balls_from_pdb.h  model.cpp  model.h  model_data.h  types.h
src/osg/: cgal_osg_utils.cpp  cgal_osg_utils.h  osg_utils.cpp  osg_utils.h  screencapture.cpp
src/qt/: main_window.cpp  main_window.h  main_window.ui  open_scene_graph_widget.cpp  open_scene_graph_widget.h  qt_composite_renderer.h  statistics.ui
src/skin_curve/: CMakeLists.txt  main.cpp
src/skin_curve/controller/: controller.cpp  controller.h
src/skin_curve/model/: model.cpp  model.h  types.h
src/skin_curve/qt/: main_window.cpp  main_window.h  main_window.ui  resource.qrc
src/skin_curve/view/: connolly_view.cpp  connolly_view.h  delaunay_view.cpp  delaunay_view.h  main_view.cpp  main_view.h  mixed_complex_view.cpp  mixed_complex_view.h  skin_curve_view.cpp  skin_curve_view.h  union_of_balls_view.cpp  union_of_balls_view.h  utils.cpp  utils.h  voronoi_view.cpp  voronoi_view.h
src/skin_surface/: CMakeLists.txt  main.cpp
src/skin_surface/CGAL/: NGHK_Skin_surface_3.h  NGHK_Skin_surface_base_3.h
src/skin_surface/model/: cached_class.h  extract_balls_from_pdb.h  model.cpp  model.h  model_data.h  types.h
src/skin_surface/osg/: cgal_osg_utils.cpp  osg_utils.h  screencapture.h
src/skin_surface/qt/: main_window.cpp  main_window.h  main_window.ui  open_scene_graph_widget.cpp  open_scene_graph_widget.h  qt_composite_renderer.cpp  qt_composite_renderer.h
src/utils/: statistic.cpp  statistic.h
